Incorrect keycodes for numpad /, -, +, . https://bugs.webkit.org/show_bug.cgi?id=99188

Patch by Sailesh Agrawal <sail@chromium.org> on 2012-10-24
Reviewed by Tony Chang.

Source/WebCore:

In r57951 we switched to mapping keys by character code.
This regressed the numpad keys which no longer match the Windows virtual key codes.
This CL fixes this by never mapping numpad keys by character code.

Test: platform/mac/fast/events/numpad-keycode-mapping.html

* platform/mac/PlatformEventFactoryMac.mm:
(WebCore::windowsKeyCodeForKeyEvent):

Source/WebKit/chromium:

In r57951 we switched to mapping keys by character code.
This regressed the numpad keys which no longer match the Windows virtual key codes.
This CL fixes this by never mapping numpad keys by character code.

* src/mac/WebInputEventFactory.mm: Disallow mapping numpad keys by character code.
(WebKit::windowsKeyCodeForKeyEvent):
* tests/WebInputEventFactoryTestMac.mm: Test to verify that all numpad keys are correctly mapped.
(TEST):

Tools:

Add key mappings for all numpad keys.

* DumpRenderTree/mac/EventSendingController.mm:
(KeyMappingEntry):
(-[EventSendingController keyDown:withModifiers:withLocation:]): Added all numpad keys.

LayoutTests:

Added test to map numpad keys to windows virtual keycodes. This test is for the Mac port only. DumpRenderTree in the chromium-mac port doesn't use Mac keycodes so this can't be tested on that platform.

* platform/mac/fast/events/numpad-keycode-mapping-expected.txt: Added.
* platform/mac/fast/events/numpad-keycode-mapping.html: Added.

Canonical link: https://commits.webkit.org/118326@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@132411 268f45cc-cd09-0410-ab3c-d52691b4dbfc